The list returned by ServiceProvider.available() shall be unmodifiable. https://github.com/unitsofmeasurement/unit-api/issues/114